--- a/templates/author/show.html.twig
+++ b/templates/author/show.html.twig
@@ -1,20 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AuthorController!{% endblock %}
+{% block title %}Hello{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/1CINFO/24-25/1CINFO1/FirstProject/src/Controller/AuthorController.php</code></li>
-        <li>Your template at <code>C:/1CINFO/24-25/1CINFO1/FirstProject/templates/author/index.html.twig</code></li>
-    </ul>
-</div>
+<h1>Hello {{ n }} </h1>
 {% endblock %}
