--- a/templates/home/hello.html.twig
+++ b/templates/home/hello.html.twig
@@ -11,7 +11,7 @@ Hello {{ nom ~ ' ' ~ag }} , {{ ag }}
 
 <ul>
 {% if t is not empty %}
-{{ t[0] ~ ' ' ~ t[1] }}
+{{ t[0] ~ ' : ' ~ t[1] }}
 {% for item in t %}
 <li>{{ item | upper | lower }}</li>
 {% endfor %}
@@ -21,11 +21,12 @@ Hello {{ nom ~ ' ' ~ag }} , {{ ag }}
 </ul>
 
 <h2>Contenu du tableau</h2>
-{% for item in t %}
-<p>{{ item }}</p>
+{% for element in t %}
+<p>{{ element | upper }}</p>
 {% else %}
 <p>LE TABLEAU EST VIDE.</p>
 {% endfor %}
+<hr>
 {% set pi = 3.14 %}
 <p>{{ pi }}</p>
 
