--- a/templates/author/list.html.twig
+++ b/templates/author/list.html.twig
@@ -17,10 +17,10 @@ No authors Found.
 <img src="{{ asset(author.picture) }}" alt="{{'Description of the image : ' ~ author.username }}" height="150px" width="150px">
 <p><b>Username : </b> {{ author.username | upper }} </p>
 <p><b>Email : </b> {{ author.email }} </p>
-<p><b>Number of Books : </b> {{ author.nb_books }} </p>
+<p><b>Number of Books : </b> {{ author.nbBooks }} </p>
 <a href="{{ path('app_author_details', {id: author.id}) }}">Details</a>
 <hr>
-{% set nbOfBooks= nbOfBooks + author.nb_books %}
+{% set nbOfBooks= nbOfBooks + author.nbBooks %}
 {% else %}
 <p>Not authors Found.</p>
 {% endfor %}
