--- a/templates/author/list.html.twig
+++ b/templates/author/list.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
 <h1>List of Authors </h1>
+<a href="{{path('app_author_add')}}">Add Author</a>
 <div>
 {#
 {% if authors is not empty and authors is defined %}
@@ -19,6 +20,7 @@ No authors Found.
 <p><b>Email : </b> {{ author.email }} </p>
 <p><b>Number of Books : </b> {{ author.nbBooks }} </p>
 <a href="{{ path('app_author_details', {id: author.id}) }}">Details</a>
+<a href="{{ path('app_author_update', {id: author.id})}}">Update</a>
 <hr>
 {% set nbOfBooks= nbOfBooks + author.nbBooks %}
 {% else %}
