--- a/templates/author/details.html.twig
+++ b/templates/author/details.html.twig
@@ -8,7 +8,7 @@
 <img src="{{ asset(author.picture) }}" alt="{{'Description of the image : ' ~ author.username }}" height="150px" width="150px">
 <p><b>Username : </b> {{ author.username | upper }} </p>
 <p><b>Email : </b> {{ author.email }} </p>
-<p><b>Number of Books : </b> {{ author.nb_books }} </p>
+<p><b>Number of Books : </b> {{ author.nbBooks }} </p>
 {% else %}
 <h3>Author Not Found.</h3>
 {% endif %}
